# serverless-components

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-3rdparty.csv  NOTICE  README.md  clippy.toml  license-tool.toml
.githooks/: pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-datadog-serverless-compat.yml  cargo.yml  checks.yml  nodejs-bridge-ci.yml  publish.yml  release-datadog-serverless-compat-per-platform.yml  release-datadog-serverless-compat.yml
benchmarks/macos-14/: data.json
benchmarks/ubuntu-24.04/: data.json
benchmarks/ubuntu-24.04-arm/: data.json
benchmarks/windows-2022/: data.json
crates/datadog-agent-config/: Cargo.toml  README.md  apm_replace_rule.rs  env.rs  mod.rs  service_mapping.rs  yaml.rs
crates/datadog-agent-config/src/: lib.rs  yaml.rs
crates/datadog-agent-config/src/deserializers/: helpers.rs  mod.rs
crates/datadog-agent-config/src/sources/: env.rs  yaml.rs
crates/datadog-agent-native/: Cargo.toml  README.md  build.rs  cbindgen.toml  datadog_agent_native.h
crates/datadog-agent-native/examples/: README.md  (+3 more)
crates/datadog-agent-native/python/: README.md  pyproject.toml
crates/datadog-agent-native/python/datadog_agent_native/: __init__.py  native_agent.py
crates/datadog-agent-native/python/scripts/: build_wheel.py
crates/datadog-agent-trace-sampler/: Cargo.toml  README.md
crates/datadog-fips/: Cargo.toml  README.md
crates/datadog-log-agent/: Cargo.toml
crates/datadog-log-agent/examples/: send_logs.rs
crates/datadog-log-agent/src/: config.rs  constants.rs  flusher.rs  intake_entry.rs  lib.rs  log_entry.rs  server.rs
crates/datadog-log-agent/src/aggregator/: core.rs  mod.rs  service.rs
crates/datadog-log-agent/tests/: integration_test.rs
crates/datadog-logs-agent/: Cargo.toml
crates/datadog-metrics-collector/: Cargo.toml
crates/datadog-metrics-collector/src/: azure_cpu.rs  azure_instance.rs  azure_linux.rs  azure_tags.rs  azure_windows.rs  cpu.rs  instance.rs  lib.rs  linux.rs  tags.rs  windows.rs
crates/datadog-metrics-collector/tests/cgroup/: whitespace
crates/datadog-serverless-compat/: Cargo.toml
crates/datadog-serverless-compat/src/: main.rs
crates/datadog-serverless-config/: Cargo.toml
crates/datadog-serverless-config/src/: lib.rs
crates/datadog-serverless-core/: Cargo.toml  README.md
crates/datadog-serverless-core/src/: config.rs  error.rs  lib.rs  services.rs
crates/datadog-serverless-core/tests/: integration_test.rs
crates/datadog-serverless-fips/: Cargo.toml  README.md
crates/datadog-serverless-fips/src/: reqwest_adapter.rs
crates/datadog-serverless-node/: .npmignore  BUILDING.md  Cargo.toml  README.md  datadog-serverless-node.darwin-arm64.node  index.d.ts  index.js  package-lock.json  package.json
crates/datadog-serverless-node/examples/: basic.js  signal-handling.js
crates/datadog-serverless-node/npm/: README.md
crates/datadog-serverless-node/npm/darwin-arm64/: package.json
crates/datadog-serverless-node/npm/darwin-x64/: package.json
crates/datadog-serverless-node/npm/linux-arm64-gnu/: package.json
crates/datadog-serverless-node/npm/linux-x64-gnu/: package.json
crates/datadog-serverless-node/npm/win32-x64-msvc/: package.json
crates/datadog-serverless-node/src/: lib.rs
crates/datadog-serverless-node/test/: basic.test.js
crates/datadog-trace-agent/: Cargo.toml
crates/datadog-trace-agent/benches/: memory_working_set.rs
crates/datadog-trace-agent/src/: aggregator.rs  config.rs  env_verifier.rs  http_utils.rs  lib.rs  metrics_collector.rs  mini_agent.rs  peer_tags.rs  peer_tags_mappings.json  proxy_aggregator.rs  proxy_flusher.rs  stats_concentrator_service.rs  stats_flusher.rs  stats_generator.rs  stats_processor.rs  trace_flusher.rs  trace_processor.rs
crates/datadog-trace-agent/tests/: integration_test.rs
crates/datadog-trace-agent/tests/common/: helpers.rs  mock_server.rs  mocks.rs  mod.rs
crates/dogstatsd/: Cargo.toml  OPTIMIZATION_SUMMARY.md  PARSING_STRATEGIES.md  PERFORMANCE_COMPARISON.md  PRESORTED_COMPARISON.md  README.md
crates/dogstatsd/benches/: optimized_bench.rs  sorted_tags.rs  sorted_tags_bench.rs
crates/dogstatsd/src/: aggregator.rs  aggregator_service.rs  api_key.rs  datadog.rs  dogstatsd.rs  double_buffered_aggregator.rs  flusher.rs  lib.rs  metric.rs  metric_optimized.rs  origin.rs  util.rs
crates/dogstatsd/src/aggregator/: core.rs  mod.rs  service.rs
crates/dogstatsd/src/datadog/: intake.rs  mod.rs  series.rs  shipping.rs
crates/dogstatsd/tests/: integration_test.rs
crates/remote-config-core/: AGENTS.md  Cargo.toml  README.md
crates/remote-config-core/src/: bootstrap.rs  cdn.rs  config.rs  embedded_roots.rs  http.rs  lib.rs  rc_key.rs  status.rs  store.rs  targets.rs  telemetry.rs  uptane.rs  uptane_path.rs
crates/remote-config-core/src/service/: client.rs  config.rs  core.rs  mod.rs  org.rs  refresh.rs  state.rs  telemetry.rs  test_support.rs  tests.rs  util.rs  websocket.rs
crates/remote-config-core/tests/: e2e_remote_config.rs
crates/remote-config-core/tests/common/: fixtures.rs  mod.rs  tuf.rs
crates/remote-config-proto/: Cargo.toml  README.md  build.rs
crates/remote-config-proto/proto/datadog/remoteconfig/: remoteconfig.proto
crates/remote-config-proto/src/: lib.rs
crates/remote-config-proto/tests/: json_parsing_test.rs  response_serialization_test.rs
crates/serverless-compat/: Cargo.toml
crates/serverless-compat/src/: main.rs
crates/trace-agent/: Cargo.toml
crates/trace-mini-agent/: Cargo.toml
docs/plans/: 2026-02-03-nodejs-bridge-design.md  2026-02-03-nodejs-bridge-phase1-core-library.md  2026-02-03-nodejs-bridge-phase2-napi-addon.md  2026-02-03-nodejs-bridge-phase3-graceful-shutdown.md  2026-02-03-nodejs-bridge-phase4-cross-platform.md
npm/datadog-serverless-compat-darwin-arm64/: package.json
npm/datadog-serverless-compat-linux-arm64/: package.json
npm/datadog-serverless-compat-linux-x64/: package.json
npm/datadog-serverless-compat-win32-ia32/: package.json
npm/datadog-serverless-compat-win32-x64/: package.json
scripts/: test-log-intake.sh
(+106 files in other folders)
