[package]
name = "datadog-agent-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
figment = { version = "0.10", default-features = false, features = ["yaml", "env"] }
libdd-trace-obfuscation = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1", default-features = false }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1", default-features = false }
log = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-aux = { version = "4.7", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tracing = { version = "0.1", default-features = false }
datadog-opentelemetry = { git = "https://github.com/DataDog/dd-trace-rs", rev = "50bfea8755b75e448a80ac04d53fa7edd414eefe", default-features = false }
dogstatsd = { path = "../dogstatsd", default-features = false }
tokio = { version = "1.47", default-features = false, features = ["time"] }

[dev-dependencies]
figment = { version = "0.10", default-features = false, features = ["yaml", "env", "test"] }

[features]
# Disabled by default. Consumers that need a TLS provider on the transitive
# libdatadog deps (e.g. for HTTPS proxying) must enable one of these features
# explicitly; without that, no TLS provider is pulled in and the crate stays
# crypto-agnostic. Pick one — Cargo doesn't enforce this, but enabling both
# (e.g. via `--all-features`) defeats the purpose since cargo unions
# features additively, leaving both ring and aws-lc-rs in the dep graph.
default = []
https = [
    "libdd-trace-utils/https",
    "libdd-trace-obfuscation/https",
]
fips = [
    "libdd-trace-utils/fips",
    "libdd-trace-obfuscation/fips",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
