[package]
name = "datadog-metrics-collector"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Collector to read, compute, and submit enhanced metrics in Serverless environments"

[dependencies]
dogstatsd = { path = "../dogstatsd", default-features = true }
tracing = { version = "0.1", default-features = false }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "62e9d0148219f89fea3aab066235d9c9ddd43767", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_JobObjects"], optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }

[features]
windows-enhanced-metrics = ["windows-sys"]
