[package]
name = "datadog-serverless-compat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Binary to run trace-agent and dogstatsd servers in Serverless environments"

[features]
default = []
windows-pipes = ["datadog-trace-agent/windows-pipes", "dogstatsd/windows-pipes"]

[dependencies]
datadog-trace-agent = { path = "../datadog-trace-agent" }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "29b010af2f7556b6beb29d1b89ed54ce6ff86e1f" }
datadog-fips = { path = "../datadog-fips", default-features = false }
dogstatsd = { path = "../dogstatsd", default-features = true }
reqwest = { version = "0.12.4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "registry",
    "fmt",
    "env-filter",
    "tracing-log",
] }
zstd = { version = "0.13.3", default-features = false }

[[bin]]
name = "datadog-serverless-compat"
