[package]
name = "datadog-serverless-compat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Binary to run trace-agent and dogstatsd servers in Serverless environments"

[features]
default = []
windows-pipes = ["datadog-trace-agent/windows-pipes", "dogstatsd/windows-pipes"]
windows-enhanced-metrics = ["datadog-metrics-collector/windows-enhanced-metrics"]

[dependencies]
datadog-trace-agent = { path = "../datadog-trace-agent" }
datadog-metrics-collector = { path = "../datadog-metrics-collector" }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "d52ee90209cb12a28bdda0114535c1a985a29d95" }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "d52ee90209cb12a28bdda0114535c1a985a29d95", default-features = false }
datadog-fips = { path = "../datadog-fips", default-features = false }
dogstatsd = { path = "../dogstatsd", default-features = true }
reqwest = { version = "0.12.4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "registry",
    "fmt",
    "env-filter",
    "tracing-log",
] }
zstd = { version = "0.13.3", default-features = false }

[[bin]]
name = "datadog-serverless-compat"
