[package]
name = "datadog-serverless-compat"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Binary to run trace-agent and dogstatsd servers in Serverless environments"

[features]
default = []
windows-pipes = ["datadog-trace-agent/windows-pipes", "dogstatsd/windows-pipes"]

[dependencies]
datadog-log-agent = { path = "../datadog-log-agent" }
datadog-trace-agent = { path = "../datadog-trace-agent" }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "d52ee90209cb12a28bdda0114535c1a985a29d95" }
datadog-fips = { path = "../datadog-fips", default-features = false }
dogstatsd = { path = "../dogstatsd", default-features = true }
reqwest = { version = "0.12.4", default-features = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "registry",
    "fmt",
    "env-filter",
    "tracing-log",
] }
zstd = { version = "0.13.3", default-features = false }

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"], default-features = false }
serde_json = { version = "1.0.116", default-features = false, features = ["alloc"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "datadog-serverless-compat"
