[package]
name = "datadog-serverless-fips"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12.4", features = ["json", "http2"], default-features = false }
rustls = { version = "0.23.18", default-features = false, features = ["fips"], optional = true }
rustls-native-certs = { version = "0.8.1", optional = true }
tracing = { version = "0.1.40", default-features = false }

[features]
default = [ "reqwest/rustls-tls" ]
fips = [ "reqwest/rustls-tls-no-provider", "rustls", "rustls-native-certs" ]
