[package]
name = "datadog-serverless-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
datadog-serverless-core = { path = "../datadog-serverless-core" }

# NAPI dependencies
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"

# Runtime
tokio = { version = "1", features = ["full"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
