[package]
name = "datadog-trace-agent"
version = "0.1.0"
license.workspace = true
edition.workspace = true

[lib]
bench = false

[features]
default = []
windows-pipes = []

[dependencies]
anyhow = "1.0"
hyper = { version = "1.6", features = ["http1", "client", "server"] }
hyper-http-proxy = { version = "1.1.0", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
hyper-util = { version = "0.1", features = ["service"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.64"
tracing = { version = "0.1", default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0.58", default-features = false }
libdd-capabilities = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-capabilities-impl = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-common = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-library-config = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-trace-protobuf = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-trace-stats = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1", features = [
    "mini_agent",
] }
libdd-trace-obfuscation = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1" }
datadog-fips = { path = "../datadog-fips" }
reqwest = { version = "0.12.23", features = [
    "json",
    "http2",
], default-features = false }
bytes = "1.10.1"

[dev-dependencies]
flate2 = "1"
rmp-serde = "1.1.1"
serial_test = "2.0.0"
duplicate = "2.0.1"
temp-env = "0.3.6"
tempfile = "3.3.0"
libdd-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "63ecad56152f675fb74761d60adf5a861dafb1e1", features = [
    "test-utils",
] }
