[package]
name = "dogstatsd"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
bench = false

[dependencies]
datadog-protos = { version = "0.1.0", default-features = false, git = "https://github.com/DataDog/saluki/", rev = "f863626dbfe3c59bb390985fa6530b0621c2a0a2" }
ddsketch-agent = { version = "0.1.0", default-features = false, git = "https://github.com/DataDog/saluki/", rev = "f863626dbfe3c59bb390985fa6530b0621c2a0a2" }
derive_more = { version = "1.0.0", features = ["display", "into"] }
hashbrown = { version = "0.15.0", default-features = false, features = ["inline-more"] }
protobuf = { version = "3.5.0", default-features = false }
ustr = { version = "1.0.0", default-features = false }
fnv = { version = "1.0.7", default-features = false }
reqwest = { version = "0.12.4", features = ["json", "http2"], default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0.58", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "net", "io-util"] }
socket2 = { version = "0.6", default-features = false }
tokio-util = { version = "0.7.11", default-features = false }
tracing = { version = "0.1.40", default-features = false }
regex = { version = "1.10.6", default-features = false }
zstd = { version = "0.13.3", default-features = false }
datadog-fips = { path = "../datadog-fips", default-features = false }
rustls-pemfile = { version = "2.0", default-features = false, features = ["std"] }

[dev-dependencies]
mockito = { version = "1.5.0", default-features = false }
proptest = "1.4.0"
tracing-test = { version = "0.2.5", default-features = false }

[features]
default = [ "reqwest/rustls-tls" ]
fips = [ "reqwest/rustls-tls-no-provider", "datadog-fips/fips" ]
windows-pipes = ["tokio/io-util"]
