[package]
name = "remote-config-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
sha2 = "0.10"
hex = "0.4"
data-encoding = "2.5"
rmp-serde = "1.3"
thiserror = "1.0"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
remote-config-proto = { path = "../remote-config-proto" }
prost = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
semver = "1.0"
serde_bytes = "0.11"
datadog-fips = { path = "../datadog-fips" }
flate2 = "1.0"
tuf = { version = "0.3.0-beta14", default-features = false }

[dev-dependencies]
tempfile = "3.10"
serde_json = "1.0"
httptest = "0.15"
tokio-stream = "0.1"
axum = { version = "0.7", features = ["ws"] }
