[package]
name = "remote-config-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
base64 = "0.22"

[dev-dependencies]
serde_json = "1.0"

[build-dependencies]
prost-build = "0.13"
